@@ -58,26 +58,40 @@ public class Call extends Step
       {
          if ((e.getScriptInstance().getDebugFlags() & ScriptInstance.DEBUG_TRACE_CALLS) == ScriptInstance.DEBUG_TRACE_CALLS && !function.equals("&@") && !function.equals("&%"))
          {
-             String args = SleepUtils.describe(e.getCurrentFrame());
-
-             try
+             if (e.getScriptInstance().isProfileOnly())
              {
+                long stat = System.currentTimeMillis();
                 temp = callme.evaluate(function, e.getScriptInstance(), e.getCurrentFrame());
                 e.clearReturn();
-              
-                if (SleepUtils.isEmptyScalar(temp))
-                {
-                   e.getScriptInstance().fireWarning(function + "(" + args + ")", getLineNumber(), true);
-                }
-                else
-                {
-                   e.getScriptInstance().fireWarning(function + "(" + args + ") = " + SleepUtils.describe(temp), getLineNumber(), true);
-                }
+                stat = System.currentTimeMillis() - stat;
+                e.getScriptInstance().collect(function, getLineNumber(), stat); 
              }
-             catch (RuntimeException rex)
+             else
              {
-                e.getScriptInstance().fireWarning(function + "(" + args + ") - FAILED!", getLineNumber(), true);
-                throw(rex);
+                String args = SleepUtils.describe(e.getCurrentFrame());
+
+                try
+                {
+                   long stat = System.currentTimeMillis();
+                   temp = callme.evaluate(function, e.getScriptInstance(), e.getCurrentFrame());
+                   e.clearReturn();
+                   stat = System.currentTimeMillis() - stat;
+                   e.getScriptInstance().collect(function, getLineNumber(), stat); /* add to the profiler, plz */
+                
+                   if (SleepUtils.isEmptyScalar(temp))
+                   {
+                      e.getScriptInstance().fireWarning(function + "(" + args + ")", getLineNumber(), true);
+                   }
+                   else
+                   {
+                      e.getScriptInstance().fireWarning(function + "(" + args + ") = " + SleepUtils.describe(temp), getLineNumber(), true);
+                   }
+                }
+                catch (RuntimeException rex)
+                {
+                   e.getScriptInstance().fireWarning(function + "(" + args + ") - FAILED!", getLineNumber(), true);
+                   throw(rex);
+                }
              }
          }
          else
