@@ -1,3 +1,3 @@
 Trace: &check('within fork') at line 9
-Trace: &fork(&closure2:9) = sleep.bridges.io.IOObject@97d026 at line 8
+Trace: &fork(&closure2:9) = sleep.bridges.io.IOObject@bf053f at line 8
 Trace: &check('outside of fork') at line 12
